Time: 31 ms (62.41%), Space: 57.8 MB (71.85%) - LeetHub